[package]
name = "dockerust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
regex = "1.10.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
futures = "0.3.30"
uuid = { version = "1.1.2", features = ["v4"] }
mktemp = "0.5.1"
base64 = "0.21.7"
serde_yaml = "0.9.30"
bcrypt = "0.15.0"
jsonwebtoken = "9.2.0"
rand = "0.8.5"
